fix hide scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -120,12 +120,7 @@
     overflow-x: hidden;
   }
   ::-webkit-scrollbar {
-    width: 0; /* Remove scrollbar space */
-    background: transparent; /* Optional: just make scrollbar invisible */
-  }
-  /* Optional: show position indicator in red */
-  ::-webkit-scrollbar-thumb {
-    background: #ff0000;
+    width: 0;
   }
 }
 
